styles.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  font-family: "Montserrat", sans-serif;
  box-sizing: border-box;
}

.container {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 0 5%;
}

/* Header Section Start */

header {
  height: 100vh;
}

.header_logo {
  color: #575757;
  font-size: 1.5rem;
  font-weight: 700;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.header_title {
  color: #575757;
  line-height: 5rem;
  font-weight: 700;
}

.header_description {
  font-weight: 500;
  width: 30rem;
  color: #828282;
  margin: 2rem 0;
}

h1 {
  font-size: 3.75rem;
}

nav {
  height: 4rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav_list {
  list-style-type: none;
  display: flex;
}

.nav_list a {
  text-decoration: none;
  margin-left: 5rem;
  text-transform: uppercase;
  transition: 0.3s;
  color: #828282;
  font-weight: 700;
  letter-spacing: 1px;
}

.nav_list a:hover {
  color: orange;
}

.header_full {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header_right img {
  width: 35rem;
}

.orange_color {
  color: orange;
}

.btn {
  cursor: pointer;
  outline: none;
  border: none;
  padding: 1.3rem 2.5rem;
  text-transform: uppercase;
  letter-spacing: 1px;
  background: linear-gradient(90deg, #fba24f, #ff1e1e);
  box-shadow: 0px 2px 30px #dd9b5cd7;
  border-radius: 6rem;
  color: white;
}

/* Header Section End */

/* About Me Section Start */
.about_me_section {
  background-image: url(images/7.png);
  background-repeat: no-repeat;
  background-size: cover;
}

h2 {
  font-size: 2.75rem;
  color: #828282;
}

.about_me_description {
  width: 28rem;
  height: 8rem;
  font-weight: 500;
  color: #828282;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 2rem 0;
}
.about_me {
  display: flex;
  align-items: center;
}

.half_width {
  width: 50%;
}

.half_width img {
  padding-top: 2rem;
  width: 25rem;
}
/* About Me Section End */

/* My Recipes Section Start */
.my_recipes_section {
  margin-top: 3rem;
}

.my_recipes_about {
  width: 35rem;
  margin: 0 auto;
  text-align: center;
}

.my_recipes_about p {
  color: #828282;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  margin: 2rem 0;
}

.recipes_list {
  display: flex;
  justify-content: space-evenly;
}

.recipe {
  margin: 0 2rem;
  padding: 0.8rem;
  display: flex;
  flex-direction: column;
  background: #ffffff;
  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
  border-radius: 30px;
}

.recipe img {
  width: 100%;
}

h3 {
  font-size: 1.5rem;
  margin: 1rem 0;
  color: #575757;
  letter-spacing: 1px;
}

.recipe  p:first-of-type {
    font-weight: 700;
}

.recipe p {
  line-height: 1.5rem;
  width: 100%;
  color: #828282;
  margin: 0rem 0 1rem 0;
}

.order_btn {
  outline: none;
  border: none;
  padding: .5rem 3rem;
  text-transform: uppercase;
  letter-spacing: 1px;
  background: linear-gradient(90deg, #fba24f, #ff1e1e);
  box-shadow: 0px 2px 30px #dd9a5c7e;
  border-radius: 6rem;
  color: white;
  cursor: pointer;
}
/* My Recipes Section End */

/* Social Statistics Start */
.social_statistics_section {
    margin: 5rem 0;
}

.social_wrapper {
    display: flex;
    justify-content: space-around;
    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.24);
    padding: 2rem;
    border-radius: 1rem;
}

.social {
    display: flex;
    flex-direction: column;
    align-items: center;
}
/* Social Statistics End */

/* Footer Start */
footer {
    padding: 4rem;
    background-color: black;
    color: #575757;
    text-align: center;
}

footer p:first-of-type {
    font-size: 2rem;
    text-transform: uppercase;
    font-weight: 700;
    margin-bottom: 1rem;
}

footer p:last-of-type {
    color: rgb(189, 184, 184);
}
/* Footer End */

